# pynalyser

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  temp-pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/src/: api.rst
pynalyser/: __init__.py  inherit_dicts.py  main.py  normalize_ast.py  portable_ast.py  py.typed  reports.py  symbol.py
pynalyser/abstract_code_representation/: classes.py
pynalyser/acr/: README.md  __init__.py  classes.py  translation.py  utils.py
pynalyser/analysers/: README.md  __init__.py  definitions.py  pipeline.py  redefinitions.py  scope.py  tools.py  type_inference.py
pynalyser/analysis/: README.md  __init__.py  _ref_types.py  _symb_types.py  _types.py  scope.py  symbol.py  symbols.py  tools.py  type_inference.py  types.py
pynalyser/ast/: __init__.py  normalize_ast.py  portable_ast.py
pynalyser/control_flow/: classes.py
pynalyser/graph_visit_casher/: ast_cacher.py  cacher.py
pynalyser/types/: __init__.py  base_types.py  exceptions.py  inheritance.py  op.py  operations.py  reference_types.py  structure_types.py  symbol_table_types.py
requirements/: basic.txt  docs.txt  test.txt
tests/: _test_acr_translator.py  test_acr_classes.py  test_acr_classes_.py  test_acr_translator.py  test_inherit_dicts.py  test_inheritance.py  test_normalize_ast.py  test_structure_types.py  utils.py
